# arxml-parser

./: .gitignore  BUILD  Dockerfile  Jenkinsfile  MODULE.bazel  README.md  WORKSPACE  docker_entrypoint.sh  manipulate_string.py  parser_gui.py  requirements.txt  run.py  test_manipulate_string.py
.github/workflows/: bazel.yml
app/: BUILD  arxml_parsing.py  container.py  export_database.py  gui.py
requirements/: BUILD  requirements_lock_3_9.txt
