""" bazel module   """
module(name = "bazel_python")

bazel_dep(name = "rules_python", version = "0.36.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.9", is_default = True)
python.toolchain(python_version = "3.11")

use_repo(python, python = "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.9",
    requirements_lock = "//requirements:requirements_lock_3_9.txt",
)
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//requirements:requirements_lock_3_11.txt",
)
use_repo(pip, "pypi")
